# emailaddress-validator

./: Cargo.toml  README.md
data/: emailaddress.pest
examples/: email-validator-debug.rs
src/: lib.rs  main.rs
