[package]
name = "emailaddress-validator"
version = "0.1.0"
authors = ["thomas9911 <thomastimmer11@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "^2.1.0"
pest_derive = "^2.1.0"


[lib]
name = "email_parser"
path = "src/lib.rs"

[[bin]]
name = "emailaddress-validator"
path = "src/main.rs"